cierre de sesión

--- a/monitoreo/dispositivos/templates/dispositivos/device_detail.html
+++ b/monitoreo/dispositivos/templates/dispositivos/device_detail.html
@@ -96,7 +96,7 @@
         <a href="{% url 'devices' %}"><i class="bi bi-cpu"></i> Dispositivos</a>
         <a href="{% url 'measurements' %}"><i class="bi bi-box-seam"></i> Mediciones</a>
         <hr style="border-color: #343a40;">
-        <a href="#" class="logout"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a>
+        <a href="{% url 'logout' %}" class="logout"><i class="bi bi-box-arrow-right"></i> Cerrar sesión</a>
     </div>
 
     <!-- Main Content -->
