--- a/monitoreo/dispositivos/templates/dispositivos/dashboard.html
+++ b/monitoreo/dispositivos/templates/dispositivos/dashboard.html
@@ -167,7 +167,7 @@
                             <li>No hay categorías.</li>
                             {% endfor %}
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Ver más</a>
+                        <a href="{% url 'devices' %}" class="btn btn-outline-primary btn-sm">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -182,7 +182,7 @@
                                 <li>No hay zonas.</li>
                             {% endfor %}
                         </ul>
-                        <a href="#" class="btn btn-outline-primary btn-sm">Ver más</a>
+                        <a href="{% url 'devices' %}" class="btn btn-outline-primary btn-sm">Ver más</a>
                     </div>
                 </div>
             </div>
@@ -208,7 +208,7 @@
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center mb-2">
                             <h6 class="section-title mb-0">Últimas 10 Mediciones</h6>
-                            <a href="#" class="small">Ver todas</a>
+                            <a href="{% url 'measurements' %}" class="small">Ver todas</a>
                         </div>
                         <table class="table table-sm table-striped mb-0">
                             <thead>
